test_case/rust-lang_rust/51456_412150182_38.rs
compile_fail,E0425\nsomething_that_doesnt_exist::foo;\n// error: unresolved name `something_that_doesnt_exist::foo`\n\n// or:\n\ntrait Foo {\n    fn bar() {\n        Self; // error: unresolved name `Self`\n    }\n}\n\n// or:\n\nlet":1}],"label":null,"suggested_replacement":"use m::A;\n\n","suggestion_applicability":"Unspecified","expansion":null}],"children":[],"rendered":null}],"rendered":"error[E0425]: cannot find value `A` in this scope\n  --> /checkout/src/test/ui/resolve/use_suggestion_placement.rs:32:13\n   |\nLL |     let _ = A; //~ ERROR cannot find\n   |             ^ not found in this scope\nhelp: possible candidate is found in another module, you can import it into scope\n   |\nLL | use m::A;\n   |\n\n"}
[00:51:20] {"message":"cannot find type `HashMap` in this scope","code":{"code":"E0412","explanation":"\nThe type name used is not in scope.\n\nErroneous code examples:\n\n